crates/vexor-compiler/tests/golden/error/input/lambda_missing_body.vx
// missing body
val double = x ->

val result = double(10)
export Circle(result)
